--- a/Du_an2/index.html
+++ b/Du_an2/index.html
@@ -61,7 +61,8 @@
                     </div>
                     <div class="info">
                         <h1 class="title">Learn without limits and spread knowledge.</h1>
-                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates, and degrees from world-class universities and companies.</p>
+                        <p class="desc">Build new skills for that “this is my year” feeling with courses, certificates,
+                            and degrees from world-class universities and companies.</p>
                         <div class="btn-group">
                             <a href="#!" class="btn btn-see">See Courses</a>
                             <a href="#!" class="watch">
@@ -80,6 +81,63 @@
                             <div class="qty-box">
                                 <strong class="qty">70+</strong>
                                 <p class="desc-small">Course</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Courses-->
+        <div class="courses">
+            <div class="content">
+                <div class="body">
+                    <h1 class="sub-title">Our popular courses</h1>
+                    <img src="./assets/img/Icons.svg" alt="" class="icon">
+                    <p class="title">Build new skills with new trendy courses and shine for the next future career.</p>
+                    <div class="card-group">
+                        <div class="card">
+                            <img src="./assets/img/img4.jpg" alt="" class="img-card">
+                            <div class="info">
+                                <div class="design-catalog">
+                                    <strong class="design">Basic web design</strong>
+                                    <img src="./assets/img/Rating.svg" alt="" class="ratting">
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.
+                                </p>
+                                <div class="btn-group">
+                                    <strong class="cost">$120.75</strong>
+                                    <a href="#!" class="btn btn-card spacial">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/img/img5.jpg" alt="" class="img-card">
+                            <div class="info">
+                                <div class="design-catalog">
+                                    <strong class="design">UI/UX design</strong>
+                                    <img src="./assets/img/Rating.svg" alt="" class="ratting">
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.
+                                </p>
+                                <div class="btn-group">
+                                    <strong class="cost">$120.75</strong>
+                                    <a href="#!" class="btn btn-card">Book Now</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/img/img6.jpg" alt="" class="img-card">
+                            <div class="info">
+                                <div class="design-catalog">
+                                    <strong class="design">Web App design</strong>
+                                    <img src="./assets/img/Rating.svg" alt="" class="ratting">
+                                </div>
+                                <p class="desc">Get the best course, gain knowledge and shine for your future career.
+                                </p>
+                                <div class="btn-group">
+                                    <strong class="cost">$120.75</strong>
+                                    <a href="#!" class="btn btn-card">Book Now</a>
+                                </div>
                             </div>
                         </div>
                     </div>
