--- a/index.html
+++ b/index.html
@@ -144,6 +144,24 @@
                 </div>
             </div>
         </div>
+        <!--Testimonial-->
+        <div class="testimonial">
+            <div class="content">
+                <div class="body">
+                    <div class="person">
+                        <img src="./assets/img/avata.jpg" alt="Peter Moor" class="avata">
+                        <h3 class="name">Peter Moor</h3>
+                        <p class="desc">Student of Web Design</p>
+                        <div class="group-icon">
+                            <div class="cicle icon-1"></div>
+                            <div class="cicle icon-2"></div>
+                            <div class="cicle icon-3"></div>
+                        </div>
+                    </div>
+                    <h4 class="comment">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </h4>
+                </div>
+            </div>
+        </div>
 
     </main>
     </body>
