--- a/index.html
+++ b/index.html
@@ -158,11 +158,157 @@
                             <div class="cicle icon-3"></div>
                         </div>
                     </div>
-                    <h4 class="comment">Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </h4>
+                    <h4 class="comment"><img src="./assets//img/Vector.svg" alt="" class="icon">Not only does my resume
+                        look impressive—filled with the names and logos of world-class institutions—but these
+                        certificates also bring me closer to my career goals by validating the skills I've learned."
+                    </h4>
                 </div>
             </div>
         </div>
-
+        <!--Features-->
+        <div class="features">
+            <div class="content">
+                <div class="body">
+                    <div class="img-group">
+                        <img src="./assets/img/img4.jpg" alt="" class="img">
+                        <img src="./assets/img/img5.jpg" alt="" class="img-low">
+                    </div>
+                    <div class="info">
+                        <h1 class="sub-title">Learner outcomes through our awesome platform</h1>
+                        <p class="desc">87% of people learning for professional development report career benefits like
+                            getting a promotion, a raise, or starting a new career.</p>
+                        <strong>Lesson Impact Report (2022)</strong>
+                        <div class="action">
+                            <a href="#!" class="btn btn-signup">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Features-2-->
+        <div class="features features-2">
+            <div class="content">
+                <div class="body">
+                    <div class="info">
+                        <h1 class="sub-title">Take the next step toward your personal and professional goals with
+                            Lesson.</h1>
+                        <p class="desc">Take the next step toward. Join now to receive personalized and more
+                            recommendations from the full Coursera catalog.</p>
+                        <div class="action">
+                            <a href="#!" class="btn btn-join">Join Now</a>
+                        </div>
+                    </div>
+                    <img src="./assets/img/img6.jpg" alt="" class="image">
+                </div>
+            </div>
+        </div>
+        <!--Blog-->
+        <div class="blog">
+            <div class="content">
+                <div class="body">
+                    <h2 class="sub-title">Our blog</h2>
+                    <p class="desc">Read our regular travel blog and know the latest update of tour and travel</p>
+                    <div class="group-card">
+                        <div class="card">
+                            <img src="./assets/img/img4.jpg" alt="" class="image">
+                            <div class="card-info">
+                                <div class="day-group">
+                                    <div class="cicle"></div>
+                                    <p class="day">21 November 2021</p>
+                                </div>
+                                <div class="line"></div>
+                                <h3 class="text">How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="#!" class="btn btn-card btn-card-1">Read More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/img/img4.jpg" alt="" class="image">
+                            <div class="card-info">
+                                <div class="day-group">
+                                    <div class="cicle"></div>
+                                    <p class="day">21 November 2021</p>
+                                </div>
+                                <div class="line"></div>
+                                <h3 class="text">How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="#!" class="btn btn-card">Read More</a>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <img src="./assets/img/img4.jpg" alt="" class="image">
+                            <div class="card-info">
+                                <div class="day-group">
+                                    <div class="cicle"></div>
+                                    <p class="day">21 November 2021</p>
+                                </div>
+                                <div class="line"></div>
+                                <h3 class="text">How to become a pro web designer in 2022 and get remot job?</h3>
+                                <a href="#!" class="btn btn-card">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="ico">
+                        <div class="group-icon">
+                            <div class="icon-1"></div>
+                            <div class="icon-2"></div>
+                            <div class="icon-3"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--Footer-->
+        <div class="footer">
+            <div class="content">
+                <div class="body">
+                    <div class="cm-0">
+                        <img src="./assets/img/Lesson..svg" alt="" class="logo">
+                        <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a
+                            lot easier withus.</p>
+                        <div class="social-group">
+                            <img src="./assets/img/Social.svg" alt="" class="social-item">
+                        </div>
+                    </div>
+                    <div class="cm-1">
+                        <h2 class="title">Company</h2>
+                        <div class="line"></div>
+                        <div class="info">
+                            <a href="#!">About Us</a>
+                            <a href="#!">Features</a>
+                            <a href="#!">Our Pricing</a>
+                            <a href="#!">Latest News</a>
+                        </div>
+                    </div>
+                    <div class="cm-2">
+                        <h2 class="title">Support</h2>
+                        <div class="line"></div>
+                        <div class="info">
+                            <a href="#!">FAQ’s</a>
+                            <a href="#!">Terms & Conditions</a>
+                            <a href="#!">Privacy Policy</a>
+                            <a href="#!">Contact Us</a>
+                        </div>
+                    </div>
+                    <div class="cm-3">
+                        <h2 class="title">Address</h2>
+                        <div class="line"></div>
+                        <div class="info">
+                            <div class="info-item">
+                                <p><strong>Location: </strong> 27 Division St, New York, NY 10002, USA</p>
+                            </div>
+                            <div class="info-item">
+                                <p><strong>Email:</strong> email@gmail.com</p>
+                            </div>
+                            <div class="info-item">
+                                <p><strong>Phone:</strong> +000 1234 567 890</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright-group">
+                    <div class="line-main"></div>
+                    <p class="copyright">Copyright ©2022 webdesign.gdn All rights reserved</p>
+                </div>
+            </div>
     </main>
     </body>
 
